--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-ctransformers==0.2.5
-sentence-transformers==2.2.2
-pinecone-client==2.2.4
-langchain==0.0.225
+ctransformers
+sentence-transformers
+pinecone-client
+langchain
 flask
 pypdf
 python-dotenv
